# pokemon_info_extraction

./: Cargo.toml  README.md  pokemon.csv
src/: main.rs
