[package]
name = "extract_and_save"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11.13", features = ["json","blocking"] }
serde_json = "1.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }